[gd_scene load_steps=4 format=3 uid="uid://c6sc6jmkpi5an"]

[ext_resource type="Script" uid="uid://duutoxbnnsydq" path="res://scripts/main_menu.gd" id="1_0dkrt"]
[ext_resource type="AudioStream" uid="uid://dndkf3r2n1o8c" path="res://music/titleAndDeath.mp3" id="2_wk0pr"]
[ext_resource type="Texture2D" uid="uid://4dyxnlr3gju0" path="res://images/knifee.png" id="3_wk0pr"]

[node name="mainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_right = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0dkrt")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 153.0
offset_top = -2.0
offset_right = 833.0
offset_bottom = 547.0
theme_override_font_sizes/font_size = 200
text = "Stupid 
Project"

[node name="start" type="Button" parent="."]
layout_mode = 0
offset_left = 1359.0
offset_top = 329.0
offset_right = 1883.0
offset_bottom = 453.0
theme_override_font_sizes/font_size = 50
text = "start"

[node name="extra" type="Button" parent="."]
layout_mode = 0
offset_left = 1361.0
offset_top = 462.0
offset_right = 1885.0
offset_bottom = 586.0
theme_override_font_sizes/font_size = 50
text = "extra start"

[node name="Instructions" type="Button" parent="."]
layout_mode = 0
offset_left = 1361.0
offset_top = 599.0
offset_right = 1885.0
offset_bottom = 723.0
theme_override_font_sizes/font_size = 50
text = "Instruction"

[node name="quit" type="Button" parent="."]
layout_mode = 0
offset_left = 1364.0
offset_top = 874.0
offset_right = 1888.0
offset_bottom = 998.0
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="music Room" type="Button" parent="."]
layout_mode = 0
offset_left = 1363.0
offset_top = 735.0
offset_right = 1887.0
offset_bottom = 859.0
theme_override_font_sizes/font_size = 50
text = "Music Room"

[node name="TitleAndDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_wk0pr")
autoplay = true

[node name="Knifee" type="Sprite2D" parent="."]
position = Vector2(1254, 394)
rotation = 1.5708
scale = Vector2(6.25, 6.25)
texture = ExtResource("3_wk0pr")

[connection signal="button_down" from="start" to="." method="_on_start_button_down"]
[connection signal="button_down" from="Instructions" to="." method="_on_instructions_button_down"]
[connection signal="button_down" from="quit" to="." method="_on_quit_button_down"]
[connection signal="button_down" from="music Room" to="." method="_on_music_room_button_down"]
